--- a/source/assets/scss/pages/_custom.scss
+++ b/source/assets/scss/pages/_custom.scss
@@ -672,5 +672,14 @@ ol.lista > li.mas:before {
         color: $primary;
         background-color: $gray-100;
     }
+    .table2 {
+        background-color: #F44336;
+        border: 1px solid white;
+      }
+      
+      .table1 {
+        background-color: #B3E5FC !important;
+        color: black !important;
+      }
 
       
