--- a/source/pug/pages/1-tema.pug
+++ b/source/pug/pages/1-tema.pug
@@ -27,77 +27,43 @@
                         p En la formación profesional, la competencia Orientar Investigación Formativa Según Referentes Técnicos, tiene como objetivo que el aprendiz pueda adquirir fundamentos metodológicos en investigación, facilitando así   el desarrollo del   proyecto formativo y el aprendizaje por proyectos. Desde esta perspectiva la investigación es la base del aprendizaje, nos enseña métodos para organizar el pensamiento, facilita la comprensión de la información, permite descubrir nuevos conocimientos necesarios para el mundo laboral y personal..
                     td                   
                         img.img-a.my-3(src="assets/images/pages/ilustraciones/4.jpg").img-icon
-            .hr-divider.my-5
-              .row.mt-5
-                .col-12
-            .row             
-                .col-12.mt-3
-                    .customTable 
-                    .customTable_row_header 
-                        .customTable_cell
-                        p #[strong ENFOQUE]
-                        .customTable_cell
-                        p #[strong CUANTITATIVO]
-                        .customTable_cell
-                        p #[strong CUALITATIVO]
-                        .customTable_cell
-                        p #[strong MIXTO]
+            
+        table.table.table-bordered.table-striped.mt-5
+            thead
+                tr
+                    th.table1.color-text ENFOQUE
 
-                    .customTable_row
-                        .customTable_cell(data-title="Norma")
-                        p Resolución 666
-                        .customTable_cell(data-title="Año")
-                        p 2020 (24 abril)
-                        .customTable_cell(data-title="Componente")
-                        p Por medio del cual se adopta el protocolo general de bioseguridad para mitigar, controlar y realizar el adecuado manejo de la pandemia del coronavirus COVID-19.
+                    th.table1 CUANTITATIVO
 
-                        .customTable_cell(data-title="Enlace")
-                        a(href="media/documentos/Resolución No. 666 de 2020.pdf", target="_blank")                   
-                            img(src="assets/images/pages/tema_1/icon_PDF.svg", alt="", style="width:35px")
-                    
-                    .customTable_row
-                        .customTable_cell(data-title="Norma")
-                        p Lineamientos PAI en el contexto de la pandemia 
-                        .customTable_cell(data-title="Año")
-                        p 23 julio 2020
-                        .customTable_cell(data-title="Componente")
-                        p Lineamientos generales para el PAI en el contexto de la pandemia de COVID-19.
-                        .customTable_cell(data-title="Enlace")
-                        a(href="media/documentos/GIPS15.pdf",target="_blank")                   
-                            img(src="assets/images/pages/tema_1/icon_PDF.svg", alt="", style="width:35px")
+                    th.table1 CUALITATIVO 
 
-                    .customTable_row
-                        .customTable_cell(data-title="Norma")
-                        p Decreto 1270  
-                        .customTable_cell(data-title="Año")
-                        p 18 de septiembre 2020
-                        .customTable_cell(data-title="Componente")
-                        p Por el cual se crea el Comité Asesor del Ministerio para el proceso estratégico de inmunización de la población colombiana frente a COVID-19.
-                        .customTable_cell(data-title="Enlace")
-                        a(href="media/documentos/Decreto_1270_18_Sept_2020.pdf",target="_blank")                   
-                            img(src="assets/images/pages/tema_1/icon_PDF.svg", alt="", style="width:35px")
+                    th.table1 MIXTO
+            tbody
+                tr
+                    td.table2.color-text  NIVEL INVESTIGATIVO
 
-                    .customTable_row
-                        .customTable_cell(data-title="Norma")
-                        p Resolución 1628 
-                        .customTable_cell(data-title="Año")
-                        p 15 de septiembre 2020
-                        .customTable_cell(data-title="Componente")
-                        p Por la cual se crea y modifica la integración de la instancia de Coordinación y Asesoría para el Acceso a Vacunas Seguras y Eficaces contra el coronavirus SARS-CoV-2 (COVID-19).
-                        .customTable_cell(data-title="Enlace")
-                        a(href="media/documentos/Resolución No. 1628 de 2020.pdf",target="_blank")                   
-                            img(src="assets/images/pages/tema_1/icon_PDF.svg", alt="", style="width:35px")
+                    td Exploratorio Descriptivo #[br] Analítico  Explicativo  
 
-                    .customTable_row
-                        .customTable_cell(data-title="Norma")
-                        p Resolución 2272 
-                        .customTable_cell(data-title="Año")
-                        p 4 de diciembre 2020
-                        .customTable_cell(data-title="Componente")
-                        p Por la cual se crea y modifica la integración de la instancia de Coordinación y Asesoría para el Acceso a Vacunas Seguras y Eficaces contra el coronavirus SARS-CoV-2 (COVID-19).
-                        .customTable_cell(data-title="Enlace")
-                        a(href="media/documentos/resolucion-2272-de-2020.pdf",target="_blank")                   
-                            img(src="assets/images/pages/tema_1/icon_PDF.svg", alt="", style="width:35px")
+                    td Interpretativo Argumentativo 
 
+                    td Cuali-cuantitativo 
 
-                
+            tbody
+                tr.table1
+                    td.table2.color-text  MÉTODO
+
+                    td Científico Experimental #[br]Correlacional Estadístico  
+
+                    td Etnográfico, Hermenéutico #[br] Fenomenológico Histórico 
+
+                    td Cuali-cuantitativo 
+
+            tbody
+                tr
+                    td.table2.color-text  TIPO DE INSTRUMENTO
+
+                    td Encuesta Test Observaciones #[br] a partir de indicadores
+
+                    td Entrevistas Testimonios Observaciones #[br] (participantes) Historias de vidaDiarios de campo Talleres Conversatorios 
+
+                    td En sus técnicas combina instrumentos de investigación
