--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -409,57 +409,46 @@
             .col-auto
                   img.img-a.md-10(src="assets/images/pages/ilustraciones/24.jpg").img-fluid
     
-      .row.justify-content-center.mt-5
-        .col-4.col-md-3
-          .header-arrow_2
-            h1.text-center.color-text ENFOQUE
-          .row.justify-content-center.align-items-center
-            .col-6
-          .header-arrow_2
-              p.text-center.mt-5 NIVEL INVESTIGATIVO
-        .col-4.col-md-3
-          .header-arrow_1
-            h1.text-center CUANTITATIVO
-          .row.justify-content-center.align-items-center
-            .col-6
-              p.text-center.mt-5 Exploratorio Descriptivo #[br] Analítico Explicativo
-        .col-4.col-md-3
-          .header-arrow_1 
-            h1.text-center CUALITATIVO
-          .row.justify-content-center.align-items-center
-            .col-6
-              p.text-center.mt-5 Interpretativo Argumentativo 
-        .col-4.col-md-3
-          .header-arrow_1
-            h1.text-center MIXTO
-          .row.justify-content-center.align-items-center
-            .col-6
-              p.text-center.mt-5 Cuali-cuantitativo    
-        .col-4.col-md-3
-          .header-arrow_2
-            h1.text-center.color-text METODO
-          .row.justify-content-center.align-items-center
-            .col-6
-          .header-arrow_2
-              p.text-center.mt-5 TIPO DE INSTRUMENTO
-        .col-4.col-md-3
-          .header-arrow_1
-            h1.text-center Científico Experimental #[br] Correlacional Estadístico 
-          .row.justify-content-center.align-items-center
-            .col-6
-              p.text-center.mt-5 EncuestaTest Observaciones #[br] a partir de indicadores
-        .col-4.col-md-3
-          .header-arrow_1 
-            h1.text-center Etnográfico, Hermenéutico #[br] Fenomenológico Histórico 
-          .row.justify-content-center.align-items-center
-            .col-6
-              p.text-center.mt-5 Entrevistas Testimonios Observaciones #[br](participantes) Historias de vida Diarios de campo Talleres Conversatorios 
-        .col-4.col-md-3
-          .header-arrow_1
-            h1.text-center Cuali-cuantitativo 
-          .row.justify-content-center.align-items-center
-            .col-6
-              p.text-center.mt-5 En sus técnicas combina #[br] instrumentos de investigación
+      table.table.table-bordered.table-striped.mt-5
+            thead
+                tr
+                    th.table1.color-text ENFOQUE
+
+                    th.table1 CUANTITATIVO
+
+                    th.table1 CUALITATIVO 
+
+                    th.table1 MIXTO
+            tbody
+                tr
+                    td.table2.color-text  NIVEL INVESTIGATIVO
+
+                    td Exploratorio Descriptivo #[br] Analítico  Explicativo  
+
+                    td Interpretativo Argumentativo 
+
+                    td Cuali-cuantitativo 
+
+            tbody
+                tr.table1
+                    td.table2.color-text  MÉTODO
+
+                    td Científico Experimental #[br]Correlacional Estadístico  
+
+                    td Etnográfico, Hermenéutico #[br] Fenomenológico Histórico 
+
+                    td Cuali-cuantitativo 
+
+            tbody
+                tr
+                    td.table2.color-text  TIPO DE INSTRUMENTO
+
+                    td Encuesta Test Observaciones #[br] a partir de indicadores
+
+                    td Entrevistas Testimonios Observaciones #[br] (participantes) Historias de vidaDiarios de campo Talleres Conversatorios 
+
+                    td En sus técnicas combina instrumentos de investigación
+
 
       .sub-line.mt-5 
         h2#tema-29 2.9.  Universo y muestra
