--- a/source/pug/pages/glosario.pug
+++ b/source/pug/pages/glosario.pug
@@ -6,15 +6,24 @@
     .jumbotron.bg-white
 
         p
-            strong.mr-2 Normatividad:
-            | se entiende por normatividad o normativa a las formas institucionales a través de las cuales el comportamiento es configurado socialmente.
+            strong.mr-2 Ciencia:
+            | entendimiento, inteligencia, razón natural.
         
         p
-            strong.mr-2 Ley:
-            | regla o norma establecida por una autoridad superior para regular, de acuerdo con la justicia, algún aspecto de las relaciones sociales.
+            strong.mr-2 Conocimiento:
+            | conjunto de conocimientos obtenidos mediante la observación y el razonamiento, sistemáticamente estructurados y de los que se deducen principios y leyes generales con capacidad predictiva y comprobables experimentalmente.
         p 
-            strong.mr-2 Decreto:
-            | resolución o decisión que toma una persona o un organismo con autoridad para ello.
+            strong.mr-2 Fenómeno:
+            | indagar para descubrir algo. Investigar un hecho.
         p 
-            strong.mr-2 Resoluciones administrativas:
-            | en este sentido, es una orden que pronuncia el responsable de un servicio público. Se trata de una norma cuyo alcance está limitado al contexto del servicio en cuestión y cuyo cumplimiento es obligatorio.
+            strong.mr-2 Leyes:
+            | regla fija a la que está sometido un fenómeno de la naturaleza. Precepto dictado por la autoridad competente, en que se manda o prohíbe algo, en consonancia con la justicia y para el bien de los gobernados.
+        p 
+            strong.mr-2 Método:
+            | modo de decir o hacer con orden. Modo de obrar o proceder, hábito o costumbre que cada uno tiene y observa.
+        p 
+            strong.mr-2 Metodología:
+            | conjunto de métodos que se siguen en una investigación científica o en una exposición doctrinal.
+        p 
+            strong.mr-2 Paradigma:
+            | teoría o conjunto de teorías cuyo núcleo central se acepta sin cuestionar y que suministra la base y modelo para resolver problemas y avanzar en el conocimiento.
