--- a/source/pug/includes/page-home_indice_tematico.pug
+++ b/source/pug/includes/page-home_indice_tematico.pug
@@ -10,6 +10,8 @@ h2 Desarrollo de <br>contenidos
             .card-body
 
                 ul.list-group.list-group-flush.list.my-n3.nav-temas
-                    +navTemaItem('play', 'Introducción', 'main.html#page/introduccion/')
-                    +navTemaItem('1', 'Componentes', 'main.html#page/componentes-bs/')
-                    +navTemaItem('question', 'Actividad didáctica', 'main.html#page/actividad-1/')
+                    +navTemaItem('text', 'Introducción', 'main.html#page/introduccion/')
+                    +navTemaItem('1', 'La importancia de investigar', 'main.html#page/tema-1/')
+                    +navTemaItem('2', 'El proyecto de investigación', 'main.html#page/tema-2/')
+                    +navTemaItem('3', 'Fuentes de Información', 'main.html#page/tema-3/')
+                    
