--- a/source/pug/info.pug
+++ b/source/pug/info.pug
@@ -31,8 +31,8 @@ html(lang="es")
 
                             .col-12.col-lg-6
 
-                                h3.curso-subtitulo Tecnología en Desarrollo Publicitario
-                                h1.curso-titulo Información del programa
+                                h3.curso-subtitulo Ivestigacion 
+                                h1.curso-titulo Fundamentos de investigación
 
                                 .brand-line-primary
 
