--- a/source/pug/includes/page-home_resultados.pug
+++ b/source/pug/includes/page-home_resultados.pug
@@ -5,7 +5,13 @@ h2  Resultados de <br>aprendizaje
     .card-body
         ul.bg-color-dark
             li 
-                span Analizar el contexto productivo según sus características y necesidades
+                span Analizar el contexto productivo según sus características y necesidades.
+            li  
+                span Estructurar el proyecto de acuerdo a criterios de la investigación.
+            li    
+                span Argumentar aspectos teóricos del proyecto según referentes nacionales e internacionales.
+            li   
+                span Proponer soluciones a las necesidades del contexto según resultados de la investigación.
            
 
 
