--- a/source/pug/pages/material-complementario.pug
+++ b/source/pug/pages/material-complementario.pug
@@ -16,14 +16,36 @@
 
             
                 tr
-                    td Aprenda Java como si estuviera en primero.
-                    td PDF
+                    td Anexo 1
+                    td Video
                     td 
-                        a(href="media/documentos/complementarios/MC_AA2_Aprenda_Java.pdf", target="_blank") <span class="fa fa-download" aria-hidden="true"></span> Descargar
+                        a(href="https://www.youtube.com/watch?v=OJPrmBjwoQA",target="_blank",style="color:#12263F")       
+                            .jumbotron.bg-grey_1.borde.text-sup
+                                .row.justify-content-center.align-items-center
+                                    .col-auto
+                                            img(src="assets/images/pages/ilustraciones/w.png", alt="", style="width:55px")
+                                            p.text-center Anexo
 
                 tr
-                    td Fundamentos de Programación en JAVA
+                    td Anexo 2
 
-                    td PDF
+                    td Video
                     td 
-                        a(href="media/documentos/complementarios/MC_AA2_Fundamentos_Programacion_Java.pdf", target="_blank") <span class="fa fa-download" aria-hidden="true"></span> Descargar                                      
+                        a(href="https://www.youtube.com/watch?v=3_tW-Cg4BSY",target="_blank",style="color:#12263F")       
+                            .jumbotron.bg-grey_1.borde.text-sup
+                                .row.justify-content-center.align-items-center
+                                    .col-auto
+                                            img(src="assets/images/pages/ilustraciones/w.png", alt="", style="width:55px")
+                                            p.text-center Anexo
+                
+                tr
+                    td Anexo 3
+
+                    td Video
+                    td 
+                        a(href="https://www.youtube.com/watch?v=cya4JCVPc9w",target="_blank",style="color:#12263F")       
+                            .jumbotron.bg-grey_1.borde.text-sup
+                                .row.justify-content-center.align-items-center
+                                    .col-auto
+                                            img(src="assets/images/pages/ilustraciones/w.png", alt="", style="width:55px")
+                                            p.text-center Anexo
