--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -79,7 +79,7 @@
                   .row.justify-content-center.align-items-center
                     .col-auto
                       img(src="assets/images/pages/ilustraciones/w.png", alt="", style="width:55px")
-                    p.text-center https://scholar.google.com/schhp?hl=es
+                    p.text-center Anexo
                         
         .sub-line.mt-5
             h2.mt-5#tema-33 3.3.  Informe de investigación
