--- a/source/assets/scss/pages/_custom.scss
+++ b/source/assets/scss/pages/_custom.scss
@@ -681,5 +681,9 @@ ol.lista > li.mas:before {
         background-color: #B3E5FC !important;
         color: black !important;
       }
-
+      
+      .img-responsive {
+        max-width: 100%;
+        height: auto;
+    }
       
