--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -7,7 +7,7 @@
             .sub-ecored
             .col-auto
               
-              img(src='assets/images/pages/ilustraciones/5.jpg')
+              img.img-responsive(src='assets/images/pages/ilustraciones/5.jpg')
               
               .centrado1 Un proyecto es un conjunto de ideas organizadas y planificadas que brindan respuestas a una necesidad identificada en un período de tiempo establecido. Cada proyecto establece un enfoque metodológico dependiendo de los objetivos y alcances. de investigación se caracteriza porque surge de un problema y se plantea a partir de una pregunta problematizadora, o pregunta de investigación, la cual debe ser desarrollada durante la ejecución del proyecto, es muy importante identificar las etapas de un proyecto de investigación, el éxito del proyecto depende de una buena planeación, por lo tanto, es importante conocer cómo están conformadas.  En la tabla 1 se relacionan cada una de sus etapas y las acciones que lo comprenden.
 
@@ -171,7 +171,7 @@
             .sub-ecored
             .col-auto
               .contenedor4
-                img(src='assets/images/pages/ilustraciones/18.jpg')
+                img.img-responsive(src='assets/images/pages/ilustraciones/18.jpg')
                 .texto-encima4
               
             
@@ -489,7 +489,7 @@
             .sub-ecored
             .col-auto
               
-              img(src='assets/images/pages/ilustraciones/28.jpg')
+              img.img-responsive(src='assets/images/pages/ilustraciones/28.jpg')
               
               .centrado4.color-text  Las conclusiones son el resultado final de la investigación, en este espacio se interpretan, comparan y analizan los datos obtenidos de la investigación. Su análisis está determinado   acorde con los objetivos y resultados planteados desde una síntesis del proyecto. De igual manera deben contener una reflexión final identificando cómo contribuye el proyecto en la generación de nuevos conocimientos en el área objeto de estudio.
 
