--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -6,7 +6,7 @@
         .row.justify-content-center.align-items-center
             .col-auto
               
-              img(src='assets/images/pages/ilustraciones/29.jpg')
+              img.img-responsive(src='assets/images/pages/ilustraciones/29.jpg')
               
               .centrado6 Las fuentes de información es el conjunto de documentos y datos confiables que contienen conocimientos útiles para consultarse en el desarrollo de una investigación.
         .sub-line.mt-5
@@ -89,6 +89,6 @@
                 .sub-ecored
                 .col-auto
                     
-                    img.mt-5(src='assets/images/pages/ilustraciones/36.jpg')
+                    img.img-responsive.mt-5(src='assets/images/pages/ilustraciones/36.jpg')
                     
                     .centrado7 El informe de investigación es el documento donde se registran el resultado final del proyecto, lo componen, un título, resumen, introducción, marco teórico, justificación, objetivos y pregunta de investigación, metodología, resultados, discusiones, conclusiones y referencias bibliográficas. Una vez se elabora el informe se renueva el ciclo investigativo, con una nueva pregunta problematizadora que permita continuar profundizando en el tema desarrollado, o un nuevo tema de interés para el investigador.
