--- a/source/pug/pages/introduccion.pug
+++ b/source/pug/pages/introduccion.pug
@@ -8,7 +8,7 @@
                 
                     .col-auto
                         .contenedor
-                        img(src='assets/images/pages/ilustraciones/1.jpg')
+                        img.img-responsive(src='assets/images/pages/ilustraciones/1.jpg')
                         .texto-encima
                 
       
