--- a/source/pug/mixins/functions.pug
+++ b/source/pug/mixins/functions.pug
@@ -102,7 +102,7 @@ mixin creditosFooter(ruta)
                     h3.footer-subtitulo.mb-4 ECOSISTEMA DE RECURSOS EDUCATIVOS DIGITALES 
 
                     p.footer-texto.mb-2
-                        | #[strong Ingry Dayanna Bonilla Monzon	 ]<br/>   
+                        | #[strong Maria Camila Garcia Santamaria]<br/>   
                         span.text-small Líder del equipo
 
             .row.mt-5
@@ -110,16 +110,6 @@ mixin creditosFooter(ruta)
                     h4.footer-subtitulo-2.mt-0 
                         .fa.fa-caret-right.mr-2
                         | Contenido Instruccional
-
-                    p.footer-texto.mb-2
-                        | #[strong Gloria Matilde Lee Mejía	 ]<br/>   
-                        span.text-small Responsable del equipo
-
-                    p.footer-texto
-                        span.text-small.text-uppercase Centro de Comercio y Servicios
-                        br
-                        span.text-small Regional Tolima
-
 
                     p.footer-texto.mb-2
                         | #[strong Rafael Nelftalí Lizcano Reyes]<br/>               
@@ -131,44 +121,35 @@ mixin creditosFooter(ruta)
                         span.text-small Regional Santander    
 
                     p.footer-texto.mb-2
-                        | #[strong Fernando Martínez Rivera]<br/>
-                        span.text-small Experto temático<br/>
+                        | #[strong Marisol Osorio Beltrán]<br/>
+                        span.text-small Experta temática<br/>
 
                     p.footer-texto
-                        span.text-small.text-uppercase Coordinación Complementaria-UTI-CSF-Bogotá
+                        span.text-small.text-uppercase Centro de Formación en Diseño Confección y Moda
+
                         br
-                        span.text-small Regional Distrito Capital
+                        span.text-small Regional Antioquia
 
 
                     p.footer-texto.mb-2
-                        | #[strong Oscar Absalón Guevara]<br/>   
-                        span.text-small Diseñador instruccional<br/>
+                        | #[strong Luz Mila Pacheco Fuente]<br/>   
+                        span.text-small Diseñadora instruccional<br/>
 
                     p.footer-texto
-                        span.text-small.text-uppercase Centro de Gestión Empresarial
+                        span.text-small.text-uppercase Centro de Diseño y Metrología Regional 
                         br
                         span.text-small Regional Distrito Capital
 
-
-                    p.footer-texto.mb-2
-                        | #[strong Andrés Felipe Velandia Espitia]<br/>   
-                        span.text-small Evaluador instruccional<br/>
-
-                    p.footer-texto
-                        span.text-small.text-uppercase Centro de Diseño y Metrología
-                        br
-                        span.text-small Regional Distrito Capital
 
                     p.footer-texto.mb-2
                         | #[strong Julieth Paola Vital López]<br/>   
-                        span.text-small Corrección de estilo<br/>
+                        span.text-small Revisora de estilo<br/>
 
                     p.footer-texto
-                        span.text-small.text-uppercase Centro para la Industria de la Comunicación Gráfica
+                        span.text-small.text-uppercase Centro para la Industria de la Comunicación Gráfica 
                         br
-                        span.text-small Regional Distrito Capital     
-
-                       
+                        span.text-small Regional Distrito Capital
+         
                 .col-12.col-md-6
                     h4.footer-subtitulo-2.mt-0 
                         .fa.fa-caret-right.mr-2
@@ -177,39 +158,45 @@ mixin creditosFooter(ruta)
                     p.footer-texto
                         | #[strong Francisco José Lizcano Reyes ]<br/>   
                         span.text-small Responsable del equipo<br/>
+                        span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura
+                        br
+                        span.text-small Regional Santander
 
                     p.footer-texto
                         | #[strong Leyson Fabian Castaño Perez]<br/>   
                         span.text-small Integración de recursos y pruebas<br/>
-
-                    p.footer-texto                           
-                        | #[strong Camilo Andrés Villamizar Lizcano]<br/>  
-                        | #[strong Ernesto Navarro Jaimes]<br/>
-                        | #[strong Eulises Orduz Amezquita]<br/>
-                        | #[strong Maria Camila Ovalle Ospina ]<br/>
-                        | #[strong Yazmin Rocio Figueroa Pacheco]<br/>
-                        span.text-small Diseño web & producción audiovisual<br/>
+                        span.text-small.text-uppercase centro de comercio y servicios 
+                        br
+                        span.text-small Regional Tolima
 
                     p.footer-texto
-                        | #[strong Edgar Mauricio Cortes]<br/>
-                        | #[strong Magdi Khalifah Gamboa]<br/>    
-                        | #[strong Gustavo Adolfo Marún Suárez]<br/>
-                        | #[strong Ricardo Alfonso González Vargas]<br/>                   
-                        span.text-small Desarrollo front-end<br/>
-
-                    p.footer-texto
-                        span.text-small.text-uppercase CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA   
+                        | #[strong José Jaime Luis Tang Pinzón ]<br/>   
+                        span.text-small Diseñador Web<br/>
+                        span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura
                         br
                         span.text-small Regional Santander
+
+                    p.footer-texto
+                        | #[strong Oleg Litvin]<br/>   
+                        span.text-small Productor Audiovisual<br/>
+                        span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura
+                        br
+                        span.text-small Regional Santander
+
+                    p.footer-texto
+                        | #[strong Gustavo Adolfo Marún Suárez]<br/>   
+                        span.text-small Desarrollador Front End<br/>
+                        span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura
+                        br
+                        span.text-small Regional Santander
+
 
                     h4.footer-subtitulo-2.mt-5
                         .fa.fa-caret-right.mr-2
                         | Gestores de repositorio
                     
                     p.footer-texto
-                        | #[strong Alba Ines Gutierrez Gonzalez ]<br/>
-                        | #[strong Fernando Amortegui ]<br/>  
-                        | #[strong Daniel Felipe Varon Molina ]<br/>     
+                        | #[strong Milady Tatiana Villamil Castellanos]<br/>     
                         span.text-small Validación de recursos.<br/>
 
                     p.footer-texto
