--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -11,22 +11,17 @@
               .centrado6 Las fuentes de información es el conjunto de documentos y datos confiables que contienen conocimientos útiles para consultarse en el desarrollo de una investigación.
         .sub-line.mt-5
             h2.mt-5#tema-31 3.1.  Fuentes primarias y secundarias
-            .row.mt-5.align-items-stretch
 
-                .col-md-6.col-lg-6
-
-                    img.img-a(src='assets/images/pages/ilustraciones/head.png').img-fluid
-                    
-                    .jumbotron.bg-grey.borde.text-sup
-
-                        p.text-center Las fuentes primarias son documentos que no han sido editados, reinterpretados o restructurado por otros investigadores, entre los más destacados son: revistas, testimonios orales, pinturas, archivos multimedios pintura o grabaciones   de primera mano, cartas entre otras.  Sus principales características es su originalidad como evidencia directa   de su autordatos
-                        
-                .col-md-6.col-lg-6
-
-                    img.img-a(src='assets/images/pages/ilustraciones/book.png').img-fluid 
-                    .jumbotron.bg-grey.borde.text-sup
-                        
-                        p.text-center Las fuentes secundarias son   textos basados en fuentes primarias, han sido analizados, interpretados y evaluados por otros investigadores. Algunos tipos de fuentes son críticas literarias, resúmenes, revistas con citaciones de otros textos, bibliografías entre otras.
+            .card-deck
+              .card.card_grey
+                .card-body
+                  img.img-a(src='assets/images/pages/ilustraciones/head.png').img-icon
+                  P.text.left.mt-5 Las fuentes primarias son documentos que no han sido editados, reinterpretados o restructurado por otros investigadores, entre los más destacados son: revistas, testimonios orales, pinturas, archivos multimedios pintura o grabaciones   de primera mano, cartas entre otras.  Sus principales características es su originalidad como evidencia directa de su autordatos 
+              .card.card_grey
+                .card-body
+                  img.img-a(src='assets/images/pages/ilustraciones/book.png').img-icon 
+                  P.text.left.mt-5 Las fuentes secundarias son textos basados en fuentes primarias, han sido analizados, interpretados y evaluados por otros investigadores. Algunos tipos de fuentes son críticas literarias, resúmenes, revistas con citaciones de otros textos, bibliografías entre otras.
+           
             .sub-line.mt-5
                 h2.mt-5#tema-32 3.2.  Búsqueda de información
 
@@ -79,7 +74,7 @@
                   .row.justify-content-center.align-items-center
                     .col-auto
                       img(src="assets/images/pages/ilustraciones/w.png", alt="", style="width:55px")
-                    p.text-center Anexo
+                    p.text-center https://scholar.google.com/schhp?hl=es
                         
         .sub-line.mt-5
             h2.mt-5#tema-33 3.3.  Informe de investigación
