--- a/source/pug/pages/introduccion.pug
+++ b/source/pug/pages/introduccion.pug
@@ -8,15 +8,12 @@
                 
                     .col-auto
                         .contenedor
-                        img.img-responsive(src='assets/images/pages/ilustraciones/1.jpg')
-                        .texto-encima
-                
-      
-                .centrado.color-text La excelencia en el mundo laboral requiere de personas con capacidades extraordinarias, lo que significa hacer algo más de lo ordinario. Hoy además de manejar y entender las aplicaciones tecnológicas, hablar una segunda lengua, aprender conocimientos técnicos especializados y   tener una mirada global para soluciones locales, se requiere de capacidades para investigar y organizar el pensamiento con métodos de trabajo enfocados en la solución de problemas y creación de valor en la empresa. La formación para el presente y futuro debe integrar conocimientos básicos en ciencias, capacidad para resolver problemas, manejo de las matemáticas, comunicación y trabajo en equipo, como estrategia fundamental para desempeñarse en cualquier profesión y oficio. (Guijosa, 2018).
-
+                        img.img-responsive(src='assets/images/pages/ilustraciones/1.svg')
+                        
             .row.justify-content-center.mt-5
                 .col-4.col-md-5
-                    img.img-a.my-3(src="assets/images/pages/ilustraciones/2.jpg").img-fluid
+                    .bg-color-azul
+                        img.img-a.my-3(src="assets/images/pages/ilustraciones/2.jpg").img-fluid
                 .col-8.col-md-6            
                     
                     p Este componente formativo tiene como finalidad que el aprendiz desarrolle capacidades argumentativas, propositivas, e interpretativas, a partir de aprender a estructurar el proyecto de investigación de acuerdo con principios y métodos sistemáticos, requeridos para la solución creativa de problemáticas identificadas en el contexto social y productivo
