--- a/source/pug/pages/1-tema.pug
+++ b/source/pug/pages/1-tema.pug
@@ -3,16 +3,14 @@
         h1 1. La importancia de investigar en el mundo del trabajo  
     .jumbotron.bg-white
         .sub-line.mt-5
-            h2#tema-11 1.1.  ¿Por qué Investigar?   
+            h2#tema-11 1.1.  ¿Por qué Investigar?  
 
-        table.default
-          tr
-                
-                td
-                    img.img-a.my-3(src="assets/images/pages/ilustraciones/3.jpg").img-icon
-                td                   
-        
-                    p La investigación es el eje fundamental para todo proceso de creación, ideación e innovación, ofrece las bases para el pensamiento creativo y la solución de problemas en cualquier ámbito de la vida y del trabajo. Ser competitivo en el mundo laboral, identificar oportunidades y desarrollar habilidades de pensamiento requiere de una gran curiosidad, ganas de aprender, vivir y emprender hacia nuevos horizontes. 
+            .row.justify-content-center.align-items-center.mt-5
+                .col-auto 
+                    img.img-a(src="assets/images/pages/ilustraciones/3.jpg").img-fluid 
+
+                .col
+                    p La investigación es el eje fundamental para todo proceso de creación, ideación e innovación, ofrece las bases para el pensamiento creativo y la solución de problemas en cualquier ámbito de la vida y del trabajo. Ser competitivo en el mundo laboral, identificar oportunidades y desarrollar habilidades de pensamiento requiere de una gran curiosidad, ganas de aprender, vivir y emprender hacia nuevos horizontes.
   
                     p Un proyecto de investigación formativa es una herramienta que ayuda al desarrollo de habilidades para la solución creativa de problemas.  Entender cómo a partir de la búsqueda sistemática de información y la estructuración metodológica del proyecto se fomentan nuevas oportunidades para el aprendizaje y el mundo laboral.
 
