--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -7,7 +7,9 @@
             .sub-ecored
             .col-auto
               
-              img.img-responsive(src='assets/images/pages/ilustraciones/5.png')
+              img(src='assets/images/pages/ilustraciones/5.jpg').img-float-1
+
+              .centrado1 Un proyecto es un conjunto de ideas organizadas y planificadas que brindan respuestas a una necesidad identificada en un período de tiempo establecido. Cada proyecto establece un enfoque metodológico dependiendo de los objetivos y alcances. de investigación se caracteriza porque surge de un problema y se plantea a partir de una pregunta problematizadora, o pregunta de investigación, la cual debe ser desarrollada durante la ejecución del proyecto, es muy importante identificar las etapas de un proyecto de investigación, el éxito del proyecto depende de una buena planeación, por lo tanto, es importante conocer cómo están conformadas.  En la tabla 1 se relacionan cada una de sus etapas y las acciones que lo comprenden.
               
       .row.justify-content-center.mt-5
         .col-6.col-md-6 
@@ -165,7 +167,7 @@
             .sub-ecored
             .col-auto
               .contenedor4
-                img.img-responsive(src='assets/images/pages/ilustraciones/18.jpg')
+                img(src='assets/images/pages/ilustraciones/18.jpg').img-float-1
                 .texto-encima4
 
                 p.centrado4.md-6  Se denomina objetivo general al fin último de la investigación, éste se construye con base en la pregunta de investigación, debe iniciar con un verbo en infinitivo, indicar el alcance, determinar las variables de operación, y brindar respuesta a la pregunta de investigación.  Para entender cómo se construye el objetivo general desde la pregunta observemos el siguiente ejemplo: Identificar las causas de mortalidad infantil en los niños entre 0 y 1 año del   municipio de Condoto. Los objetivos específicos, se plantean como ese conjunto de acciones que permiten cumplir con el objetivo general. Se recomienda que los objetivos específicos oscilan entre tres y cuatro objetivos. Los objetivos deben ser claros, medibles, orientados a la generación de conocimientos, coherentes con el planteamiento del problema y deben contribuir al logro de la investigación.  Para mayor claridad es importante tener en cuenta el siguiente ejemplo: Caracterizar las causas de mortalidad infantil en los niños entre 0 y 1 según informes médicos históricos registrados en el Ministerio de Salud.
@@ -179,7 +181,7 @@
         .col-6.col-md-5
 
           .col
-            img.img-responsive.img-a(src="assets/images/pages/ilustraciones/19.png").img-fluid
+            img.img-a(src="assets/images/pages/ilustraciones/19.png").img-float
         
         .col-6.col-md-5  
           .col
@@ -394,7 +396,7 @@
               
               img(src='assets/images/pages/ilustraciones/23.jpg')
               
-              .centrado1 <b>¿Cuáles son las causas de mortalidad infantil en los niños entre 0 y 1 año del municipio de Condoto? </b> Según esta pregunta, podríamos establecer por ejemplo en el marco teórico los siguientes temas: Mortalidad por enfermedad, accidentalidad, violencia entre otras.  Cada uno de los conceptos mencionados tienen como finalidad sustentar la investigación desde las teorías existentes   y con base en ello, se construye el marco teórico de la investigación. Para la construcción del fundamento teórico, es importante buscar en fuentes de información confiables, como bases de datos, libros, tesis, documentos técnicos especializados, autores reconocidos.
+              .centrado1 <b>¿Cuáles son las causas de mortalidad infantil en los niños entre 0 y 1 año del municipio de Condoto?</b> Según esta pregunta, podríamos establecer por ejemplo en el marco teórico los siguientes temas: Mortalidad por enfermedad, accidentalidad, violencia entre otras.  Cada uno de los conceptos mencionados tienen como finalidad sustentar la investigación desde las teorías existentes   y con base en ello, se construye el marco teórico de la investigación. Para la construcción del fundamento teórico, es importante buscar en fuentes de información confiables, como bases de datos, libros, tesis, documentos técnicos especializados, autores reconocidos.
 
       .sub-line.mt-5       
         h2#tema-28 2.8.  Técnicas de recolección de informacións
@@ -453,13 +455,13 @@
         .card-deck
           .card.card_grey
             .card-body
-              img.img-a(src='assets/images/pages/ilustraciones/25.svg')
+              img.img-a(src='assets/images/pages/ilustraciones/25.png')
               p.card-text.text-center.mt-5
                 | #[strong UNIVERSO FINITO]
               P.text-center Es la población de elementos totales que se puede contar o medir, por ejemplo, la población de una ciudad. 
           .card.card_grey
             .card-body
-              img.img-a(src='assets/images/pages/ilustraciones/26.svg')
+              img.img-a(src='assets/images/pages/ilustraciones/26.png')
               p.card-text.text-center.mt-4
                 | #[strong UNIVERSO INFINITO]
               P.text-center Es el conjunto de elementos que no se pueden contar o medir, por ejemplo, la cantidad de árboles de la región.
