--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -74,7 +74,7 @@
                   .row.justify-content-center.align-items-center
                     .col-auto
                       img(src="assets/images/pages/ilustraciones/w.png", alt="", style="width:55px")
-                    p.text-center https://scholar.google.com/schhp?hl=es
+                    p.text-center Google académico
                         
         .sub-line.mt-5
             h2.mt-5#tema-33 3.3.  Informe de investigación
@@ -84,6 +84,6 @@
                 .sub-ecored
                 .col-auto
                     
-                    img.img-responsive.mt-5(src='assets/images/pages/ilustraciones/36.jpg')
+                    img.mt-5(src='assets/images/pages/ilustraciones/36.jpg').img-float-1
                     
                     .centrado7 El informe de investigación es el documento donde se registran el resultado final del proyecto, lo componen, un título, resumen, introducción, marco teórico, justificación, objetivos y pregunta de investigación, metodología, resultados, discusiones, conclusiones y referencias bibliográficas. Una vez se elabora el informe se renueva el ciclo investigativo, con una nueva pregunta problematizadora que permita continuar profundizando en el tema desarrollado, o un nuevo tema de interés para el investigador.
