--- a/source/pug/pages/introduccion.pug
+++ b/source/pug/pages/introduccion.pug
@@ -8,7 +8,10 @@
                 
                     .col-auto
                         .contenedor
-                        img.img-responsive(src='assets/images/pages/ilustraciones/1.svg')
+                        img(src='assets/images/pages/ilustraciones/1.jpg').img-float-1
+
+                        .texto-encima
+                        .centrado.color-text La excelencia en el mundo laboral requiere de personas con capacidades extraordinarias, lo que significa hacer algo más de lo ordinario. Hoy además de manejar y entender las aplicaciones tecnológicas, hablar una segunda lengua, aprender conocimientos técnicos especializados y   tener una mirada global para soluciones locales, se requiere de capacidades para investigar y organizar el pensamiento con métodos de trabajo enfocados en la solución de problemas y creación de valor en la empresa. La formación para el presente y futuro debe integrar conocimientos básicos en ciencias, capacidad para resolver problemas, manejo de las matemáticas, comunicación y trabajo en equipo, como estrategia fundamental para desempeñarse en cualquier profesión y oficio. (Guijosa, 2018).
                         
             .row.justify-content-center.mt-5
                 .col-4.col-md-5
