--- a/source/pug/mixins/functions.pug
+++ b/source/pug/mixins/functions.pug
@@ -113,7 +113,7 @@ mixin creditosFooter(ruta)
 
                     p.footer-texto.mb-2
                         | #[strong Rafael Nelftalí Lizcano Reyes]<br/>               
-                        span.text-small Asesor pedagógico<br/>
+                        span.text-small Asesor metodológico y pedagógico <br/>
 
                     p.footer-texto
                         span.text-small.text-uppercase CENTRO INDUSTRIAL DEL DISEÑO Y LA MANUFACTURA   
@@ -171,6 +171,12 @@ mixin creditosFooter(ruta)
 
                     p.footer-texto
                         | #[strong José Jaime Luis Tang Pinzón ]<br/>   
+                        span.text-small Diseñador Web<br/>
+                        span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura
+                        br
+                        span.text-small Regional Santander
+                    p.footer-texto
+                        | #[strong Juan Daniel polanco Muñoz]<br/>   
                         span.text-small Diseñador Web<br/>
                         span.text-small.text-uppercase Centro Industrial Del Diseño Y La Manufactura
                         br
