--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -55,9 +55,9 @@
         
         .col-6.col-md-6  
          
-          P.mt-5 Se aplican los diferentes métodos de recolección de información, la cual tiene como finalidad, responder la pregunta de investigación planteada.
+          P.mt-5 Se aplican los diferentes métodos de recolección de información,tiene como finalidad, responder la pregunta de investigación planteada.
             .col-4
-              img.mt-3(src="assets/images/pages/ilustraciones/line.jpg").img-icon
+              img.mt-5(src="assets/images/pages/ilustraciones/line.jpg").img-icon
         
         .col-6.col-md-6  
           .row.justify-content-center.align-items-center
@@ -108,7 +108,7 @@
                   p.mb-0 La diferencia entre el tema y la idea es que el primero es amplio y multidimensional, a partir de este se concretan las ideas que se profundizan con el desarrollo de la investigación.  Todo proceso investigativo requiere información primaria o secundaria que sirva como fuente de consulta o sustentación del proyecto.
 
       .sub-line.mt-5 
-      h2#tema-22 2.2. Enfoques de la investígación
+      h2#tema-22 2.2. Enfoques de la investigación
 
               p.mt-5 El enfoque es la forma metodológica cómo se aborda la idea de investigación y da respuesta a la pregunta de investigación, constituye la estrategia ampliada para abordar el problema.  Los enfoques pueden ser de carácter cualitativo cuantitativo y mixto, cada uno tiene sus propias características y finalidades dependiendo de los resultados que se pretenden obtener con la investigación.            
       
@@ -118,13 +118,13 @@
             img.img-a(src='assets/images/pages/ilustraciones/13.png')
             p.card-text.text-center.mt-5
               | #[strong CUALITATIVO]
-            P.text-center Interpreta, describe los fenómenos a partir sus cualidades, puede  utilizar algunos datos
+            P.text-center Interpreta. Describe los fenómenos a partir sus cualidades, puede  utilizar algunos datos
         .card.card_blue_1
           .card-body
             img.img-a(src='assets/images/pages/ilustraciones/14.png')
             p.card-text.text-center.mt-5
               | #[strong CUANTITATIVO]
-            P.text-center Mide, cuantifica a partir de herramientas estadísticas y matemáticas
+            P.text-center Mide. Cuantifica a partir de herramientas estadísticas y matemáticas
         .card.card_blue
           .card-body
             img.img-a(src='assets/images/pages/ilustraciones/15.png')
@@ -170,12 +170,12 @@
                 img(src='assets/images/pages/ilustraciones/18.jpg').img-float-1
                 .texto-encima4
 
-                p.centrado4.md-6  Se denomina objetivo general al fin último de la investigación, éste se construye con base en la pregunta de investigación, debe iniciar con un verbo en infinitivo, indicar el alcance, determinar las variables de operación, y brindar respuesta a la pregunta de investigación.  Para entender cómo se construye el objetivo general desde la pregunta observemos el siguiente ejemplo: Identificar las causas de mortalidad infantil en los niños entre 0 y 1 año del   municipio de Condoto. Los objetivos específicos, se plantean como ese conjunto de acciones que permiten cumplir con el objetivo general. Se recomienda que los objetivos específicos oscilan entre tres y cuatro objetivos. Los objetivos deben ser claros, medibles, orientados a la generación de conocimientos, coherentes con el planteamiento del problema y deben contribuir al logro de la investigación.  Para mayor claridad es importante tener en cuenta el siguiente ejemplo: Caracterizar las causas de mortalidad infantil en los niños entre 0 y 1 según informes médicos históricos registrados en el Ministerio de Salud.
+                p.centrado4.md-6  Se denomina objetivo general al fin último de la investigación, éste se construye con base en la pregunta de investigación, debe iniciar con un verbo en infinitivo, indicar el alcance, determinar las variables de operación, y brindar respuesta a la pregunta de investigación.  Para entender cómo se construye el objetivo general desde la pregunta observemos el siguiente ejemplo: Identificar las causas de mortalidad infantil en los niños entre 0 y 1 año del   municipio de Condoto. #[br] Los objetivos específicos, se plantean como ese conjunto de acciones que permiten cumplir con el objetivo general. Se recomienda que los objetivos específicos oscilan entre tres y cuatro objetivos. Los objetivos deben ser claros, medibles, orientados a la generación de conocimientos, coherentes con el planteamiento del problema y deben contribuir al logro de la investigación.  Para mayor claridad es importante tener en cuenta el siguiente ejemplo: Caracterizar las causas de mortalidad infantil en los niños entre 0 y 1 según informes médicos históricos registrados en el Ministerio de Salud.
 
       .sub-line.mt-5 
           h2 2.5.  Niveles de la investigación
 
-          p Los niveles determinan la profundidad de la investigación, a mayor profundidad investigativa mayor complejidad y capacidad de análisis e interpretación de los datos por parte del equipo investigador. En la gráfica siguiente, muestra las características de la investigación según su nivel de profundidad.  
+          p Los niveles determinan la profundidad de la investigación, a mayor profundidad investigativa mayor complejidad y capacidad de análisis e interpretación de los datos por parte del equipo investigador. En la gráfica siguiente, muestran las características de la investigación según su nivel de profundidad.  
 
       .row.justify-content-center.mt-5
         .col-6.col-md-5
@@ -186,17 +186,17 @@
         .col-6.col-md-5  
           .col
            
-              p.mt-6 Observa, rastrea pregunta Indaga,compara 
+              p.mt-6 Exploratorio: observa, rastrea pregunta indaga, compara 
 
-              p.mt-6 Observa, rastrea pregunta Indaga,compara  
+              p.mt-4 Descriptivo: describe, los hechos a partir de observar, rastrear 
 
-              p.mt-5 Estudia minuciosamente los hechos  para analizarlos y establece nuevas teorías
+              p.mt-5 Analítico: estudia minuciosamente los hechos para analizarlos y establecer nuevas 
 
-              p.mt-5 Explica de forma detallada  cada variable estudiada a partir de métodos rigurosos de análisis
+              p.mt-5 Explicativo: explica de forma detallada cada variable estudiada a partir de métodos rigurosos de análsis
 
-              p.mt-5 Contrasta hipótesis, argumenta sus relaciones desde principios y teoría, demuestra nuevas teorías 
+              p.mt-5 Interpretativo: requiere de habilidades y experiencia para interpretar los hechos investigados   
 
-              p.mt-6 Contrasta hipótesis, argumenta sus relaciones desde principios y teoría, demuestra nuevas teorías
+              p.mt-5 Argumentativo: contrasta hipótesis, argumenta sus relaciones desde principios y teoría, demuestra nuevas teorías
 
 
           
@@ -209,12 +209,12 @@
       .jumbotron.bg-6.mt-5
           .row.justify-content-center.align-items-center
                .col
-                  p.mb-0 El término método proviene del griego “meta hacía, hodos camino, el camino más adecuado para tal fin’'. Los métodos son el conjunto de procedimientos específicos teóricos como prácticos que determinan la forma como se realizará la investigación.
+                  p.mb-0 El término método proviene del griego “meta-hacía, hodós-camino, el camino más adecuado hacia un fin’'. Los métodos son el conjunto de procedimientos específicos teóricos como prácticos que determinan la forma como se realizará la investigación. 
     
       .row.justify-content-center.mt-5
         .col-6.col-md-6 
           .header-arrow_1
-            h1.text-center METODOS
+            h1.text-center MÉTODOS
 
           .row.justify-content-center.align-items-center
 
@@ -228,7 +228,7 @@
 
         .col-6.col-md-6  
           .header-arrow_1 
-            h1.text-center CARACTERISTICAS    
+            h1.text-center CARACTERÍSTICAS   
 
           p.mt-5 Presenta un desarrollo lógico, observa, resuelve hipótesis, experimenta contrasta teorías y concluye
             .col-4
@@ -420,9 +420,9 @@
                 tr
                     td.table2.color-text  NIVEL INVESTIGATIVO
 
-                    td Exploratorio Descriptivo #[br] Analítico  Explicativo  
+                    td Exploratorio #[br]Descriptivo #[br] Analítico #[br] Explicativo  
 
-                    td Interpretativo Argumentativo 
+                    td Interpretativo#[br]Argumentativo 
 
                     td Cuali-cuantitativo 
 
@@ -430,9 +430,9 @@
                 tr.table1
                     td.table2.color-text  MÉTODO
 
-                    td Científico Experimental #[br]Correlacional Estadístico  
+                    td Científico#[br] Experimental #[br]Correlacional#[br]Estadístico  
 
-                    td Etnográfico, Hermenéutico #[br] Fenomenológico Histórico 
+                    td Etnográfico#[br] Hermenéutico #[br] Fenomenológico #[br]Histórico 
 
                     td Cuali-cuantitativo 
 
@@ -440,9 +440,9 @@
                 tr
                     td.table2.color-text  TIPO DE INSTRUMENTO
 
-                    td Encuesta Test Observaciones #[br] a partir de indicadores
+                    td Encuesta#[br] Test#[br] Observaciones #[br] a partir de indicadores
 
-                    td Entrevistas Testimonios Observaciones #[br] (participantes) Historias de vidaDiarios de campo Talleres Conversatorios 
+                    td Entrevistas#[br] Testimonios Observaciones #[br] (participantes)#[br] Historias de vida #[br]Diarios de campo #[br] Talleres#[br]Conversatorios
 
                     td En sus técnicas combina instrumentos de investigación
 
