--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -16,11 +16,11 @@
               .card.card_grey
                 .card-body
                   img.img-a(src='assets/images/pages/ilustraciones/head.png').img-icon
-                  P.text.left.mt-5 Las fuentes primarias son documentos que no han sido editados, reinterpretados o restructurado por otros investigadores, entre los más destacados son: revistas, testimonios orales, pinturas, archivos multimedios pintura o grabaciones   de primera mano, cartas entre otras.  Sus principales características es su originalidad como evidencia directa de su autordatos 
+                  P.text.left.mt-5 Las fuentes primarias son documentos que no han sido editados, reinterpretados o restructurados por otros investigadores, entre los más destacados están, revistas, testimonios orales, pinturas, archivos multimedios pintura o grabaciones   de primera mano, cartas entre otras.  Sus principales características son su originalidad como evidencia directa de su autor.
               .card.card_grey
                 .card-body
                   img.img-a(src='assets/images/pages/ilustraciones/book.png').img-icon 
-                  P.text.left.mt-5 Las fuentes secundarias son textos basados en fuentes primarias, han sido analizados, interpretados y evaluados por otros investigadores. Algunos tipos de fuentes son críticas literarias, resúmenes, revistas con citaciones de otros textos, bibliografías entre otras.
+                  P.text.left.mt-5 Las fuentes secundarias son textos basados en fuentes primarias, han sido analizados, interpretados y evaluados por otros investigadores. Algunos tipos de fuentes son críticas literarias, resúmenes, revistas con citaciones de otros textos, bibliografías entre otras
            
             .sub-line.mt-5
                 h2.mt-5#tema-32 3.2.  Búsqueda de información
