--- a/source/pug/pages/material-complementario.pug
+++ b/source/pug/pages/material-complementario.pug
@@ -8,7 +8,7 @@
         table.table.table-bordered.table-striped
             thead.thead-dark
                 tr
-                    th.text-center Autor, (año del documento o material),  Nombre del documento o material.
+                    th.text-center Videos complementarios
                     th.text-center Tipo de material ( Video, capítulo de libro, articulo, otro) 
                     th.text-center(style="width:150px") Enlace del Recurso o Archivo del documento o material
 
@@ -16,7 +16,7 @@
 
             
                 tr
-                    td Anexo 1
+                    td Pregunta Investigación
                     td Video
                     td 
                         a(href="https://www.youtube.com/watch?v=OJPrmBjwoQA",target="_blank",style="color:#12263F")       
@@ -27,7 +27,7 @@
                                             p.text-center Anexo
 
                 tr
-                    td Anexo 2
+                    td Cómo determinar el universo, población y muestra | metodología de la investigación
 
                     td Video
                     td 
@@ -39,7 +39,7 @@
                                             p.text-center Anexo
                 
                 tr
-                    td Anexo 3
+                    td Calculo del tamaño de la muestra
 
                     td Video
                     td 
